--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ body {
   grid-template-columns: 1.35fr 3fr;
   height: 1122px;
   width: 793px;
-  margin: 0 auto;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -66,6 +65,9 @@ body {
 
 @media only screen and (max-width: 900px) {
   body{
+    height: 100vh;
+    width: 100vw;
+    padding: 0;
     overflow: hidden;
   }
 
@@ -75,8 +77,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     top: 0;
     z-index: 999;
     background-color: var(--container-color-alt);
