--- a/css/style.css
+++ b/css/style.css
@@ -32,20 +32,20 @@ body {
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.download-out{
+.download-out {
   display: none;
   text-align: center;
   cursor: pointer;
 }
 
-.download-out p{
+.download-out p {
   font-size: 26px;
   font-weight: 600;
   margin: 0 16px;
   color: var(--text-color);
 }
 
-.download-out i{
+.download-out i {
   font-weight: 500;
   font-size: 64px;
   margin: 0 16px;
@@ -54,32 +54,38 @@ body {
 }
 
 @keyframes photo-move {
+
   0%,
   100% {
     transform: scale(100%);
   }
+
   50% {
     transform: scale(90%);
   }
 }
 
 @media only screen and (max-width: 900px) {
-  body{
-    height: 100vh;
-    width: 100vw;
+  body {
+    max-height: 100vh;
+    max-width: 100vw;
     padding: 0;
+    margin: 0;
     overflow: hidden;
   }
 
-  .download-out{
+  .main {
+    display: none;
+  }
+
+  .download-out {
     position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%;
-    top: 0;
+    height: 100vh;
+    width: 100vw;
     z-index: 999;
     background-color: var(--container-color-alt);
   }
@@ -105,7 +111,7 @@ body {
   outline: none;
 }
 
-.download.hidden{
+.download.hidden {
   display: none;
 }
 
@@ -132,7 +138,7 @@ section .title {
   margin-bottom: 12px;
 }
 
-section .content{
+section .content {
   font-size: 14px;
   margin-bottom: 16px;
   color: var(--text-color);
@@ -145,7 +151,7 @@ section .content{
   justify-content: center;
 }
 
-.side-left  .photo img {
+.side-left .photo img {
   width: 175px;
   height: 175px;
   border-radius: 50%;
@@ -153,7 +159,7 @@ section .content{
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
-.side-left .content{
+.side-left .content {
   display: flex;
   flex-direction: column;
   gap: 14px;
@@ -188,6 +194,7 @@ section .content{
   margin-right: 2px;
   line-height: 34px;
 }
+
 /* End Side Left */
 
 
@@ -307,4 +314,5 @@ section .content{
   margin-top: 4px;
   color: var(--text-color);
 }
+
 /* End Side Right */
